@@ -3,6 +3,7 @@
 - mpg123:
 -- remote control API v10 with "@P 3" as additonal message on track end
 -- also added PROGRESS command as opposite of SILENCE
+-- fix some verbosity, tweak help for --icy-interval
 
 1.29.4
 ------
